--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+	background: #e0e0e0;
+}
+
+.col-md-6 {
+	padding: 0;
+}
